@@ -4,6 +4,20 @@
 	<inherits name="com.google.gwt.json.JSON"/>
 	<inherits name="com.google.web.bindery.autobean.AutoBean"/>
 	
+	<!-- Logging													-->
+	<inherits name="com.google.gwt.logging.Logging" />
+	<set-property name="gwt.logging.enabled" value="FALSE" />     
+<!-- 	<set-property name="gwt.logging.logLevel" value="ALL" /> -->
+<!-- 	<set-property name="gwt.logging.popupHandler" value="ENABLED" />	             -->
+<!-- 	<set-property name="gwt.logging.developmentModeHandler" value="DISABLED" />     -->
+<!-- 	<set-property name="gwt.logging.systemHandler" value="DISABLED" />   -->
+<!-- 	<set-property name="gwt.logging.consoleHandler" value="DISABLED"/>    -->
+<!-- 	<set-property name="gwt.logging.firebugHandler" value="DISABLED" /> -->
+<!-- 	<set-property name="gwt.logging.simpleRemoteHandler" value="DISABLED" /> -->
+<!-- 	<set-property name="compiler.stackMode" value="emulated" />   -->
+<!-- 	<set-configuration-property name="compiler.emulatedStack.recordLineNumbers" value="true"/>    -->
+<!-- 	<set-configuration-property name="compiler.emulatedStack.recordFileNames" value="true"/>  -->
+	
   	<!-- Other module inherits                                      -->
   	<source path="client"/>
   	<source path="controller"/>
@@ -20,6 +34,6 @@
   	<source path="widget"/>
   	
 	<entry-point class="org.openremote.web.console.client.WebConsole"/>
-	<!-- <set-property name="user.agent" value="safari" /> -->
+<!-- 	<set-property name="user.agent" value="safari" /> -->
 </module>
 
